--- a/_data/main_info1.yaml
+++ b/_data/main_info1.yaml
@@ -1,9 +1,9 @@
 name: "Ali Ghodsi"
 title: "Professor, University of Waterloo"
 email: "[first name].[last name] [AT] uwaterloo.ca"
-profile_pic: "/assets/profile-pics/AG_small.jpg"
+profile_pic: "/assets/profile-pics/SU_small.jpg"
 #twitter: "https://twitter.com/msaveski"
 linkedin: "https://www.linkedin.com/in/ali-ghodsi-525b0a61/?originalSubdomain=ca"
-github: ""
-google_scholar: "https://scholar.google.com/citations?user=WXbhp_4AAAAJ&hl=en"
-youtube: "https://www.youtube.com/@DataScienceCoursesUW"
+#github: "https://github.com/msaveski"
+#google_scholar: "https://scholar.google.com/citations?user=WXbhp_4AAAAJ&hl=en"
+#youtube: "https://www.youtube.com/@DataScienceCoursesUW"
