--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,6 +1,6 @@
 name: "Ali Ghodsi"
 title: "Professor, University of Waterloo"
-email: "[first name].[last name] [AT] uwaterloo.ca"
+email: "ali.ghodsi@uwaterloo.ca"
 profile_pic: "/assets/profile-pics/AG_small.jpg"
 #twitter: "https://twitter.com/msaveski"
 linkedin: "https://www.linkedin.com/in/ali-ghodsi-525b0a61/?originalSubdomain=ca"
