add google analytics

--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -7,3 +7,4 @@ linkedin: "https://www.linkedin.com/in/ali-ghodsi-525b0a61/?originalSubdomain=ca
 github: ""
 google_scholar: "https://scholar.google.com/citations?user=WXbhp_4AAAAJ&hl=en"
 youtube: "https://www.youtube.com/@DataScienceCoursesUW"
+google_analytics_tracking_id: "G-7NWFL03HMT"
