--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,14 +1,10 @@
-- date: Teaching in Winter 2025
-  description: |
-    - Deep Learning (STAT 940) - Online
-    - Generative AI and Large Language Models (STAT 946)
+- date: Sabbatical Leave
+  description: "I am currently on sabbatical and will not be teaching in Fall 2025 and Winter 2026."
 
-- date: New paperes 
-  description: |
-    - Our lab is presenting three papers at NeurIPS 2024. 
-    - Our paper GraphPI "Efficient Protein Inference with Graph Neural Networks" has been accepted in the Journal of Proteome Research.
+- date: STAT 940 Course Information
+  description: "Deep Learning (STAT 940) is usually taught in Fall and Winter terms. [Course Outline - PDF](/assets/pdfs/stat940_outline.pdf)."
 
 - date: Positions
-  description: "We are seeking passionate and motivated Master's and PhD students to join our research projects. Learn more on the [Prospective Students](#prospective-students) page."
+  description: "We are seeking passionate and motivated PhD students to join our research projects. Learn more on the [Prospective Students](#prospective-students) page."
 
 
